holding down images on ios still popped open a context menu, additional bug fixes implemented to prevent this

--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,7 @@ footer {
     user-select: none;
     -webkit-user-select: none;
     -webkit-user-drag: none;
+    -webkit-touch-callout: none;
 }
 
 /* ========== pong icons ========== */
